added login page

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -13,6 +13,8 @@ $dark-green: #37B188;
 $dark-blue:#4771CB;
 $background-color:#FAFAFA ;
 $light-blue:#54C9E8;
+$lighter-gray:#E7EBEE;
+$bright-green:#39C9AE;
 
 $regular:400;
 $medium:500;
@@ -27,7 +29,7 @@ $bold:700;
 .fw-700{ font-weight: 700; }
 .fw-800{ font-weight: 800; }
 
-
+.fs-11{ font-size: 12px !important; }
 .fs-12{ font-size: 12px !important; }
 .fs-13{ font-size: 13px !important; }
 .fs-14{ font-size: 14px !important; }
