displayed events and modified calendar

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -13,11 +13,17 @@ $dark-green: #37B188;
 $dark-blue:#4771CB;
 $background-color:#FAFAFA ;
 $background-color-darker:#F7F7F7;
+$lighter-blue:#F5F7FD;
 $light-blue:#54C9E8;
+$light-red:#FDF3F0;
+$light-yellow:#FFFCEF;
 $lighter-gray:#E7EBEE;
 $bright-green:#39C9AE;
 $bright-red:#C83935;
 $bright-yellow:#F3BB4E;
+
+//Calendar Events
+
 
 $regular:400;
 $medium:500;
@@ -26,6 +32,7 @@ $semi-bold:600;
 $bold:700;
 
 .fc-gray{color: $gray; }
+
 /* .fc-lavender{ color: $lavender; }
 .fc-yellow{ color: $yellow; }
 .fc-red{ color: $red; } */
