--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -44,6 +44,7 @@ $bold:700;
 .fw-700{ font-weight: 700; }
 .fw-800{ font-weight: 800; }
 
+.fs-9{ font-size: 9px !important; }
 .fs-10{ font-size: 10px !important; }
 .fs-11{ font-size: 11px !important; }
 .fs-12{ font-size: 12px !important; }
@@ -118,5 +119,12 @@ $bold:700;
   background: -moz-linear-gradient(140deg, rgba(85,201,232,1) 0%, rgba(42,145,222,1) 100%);
   background: -webkit-linear-gradient(140deg, rgba(85,201,232,1) 0%, rgba(42,145,222,1) 100%);
   background: linear-gradient(140deg, rgba(85,201,232,1) 0%, rgba(42,145,222,1) 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#55c9e8",endColorstr="#2a91de",GradientType=1);
+}
+.gradient-blue-bg-color{
+  background: rgb(85,201,232);
+  background: -moz-linear-gradient(105deg, rgba(85,201,232,1) 0%, rgba(42,145,222,1) 100%);
+  background: -webkit-linear-gradient(105deg, rgba(85,201,232,1) 0%, rgba(42,145,222,1) 100%);
+  background: linear-gradient(105deg, rgba(85,201,232,1) 0%, rgba(42,145,222,1) 100%);
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#55c9e8",endColorstr="#2a91de",GradientType=1);
 }
