--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -97,7 +97,9 @@ $bold:700;
       text-decoration: none;
     }
   }
-  
+  .align-right{
+    text-align: right;
+  }
 
 .file-name{
     font-size: 0.9rem;
