Modified Settings Section

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,8 +1,10 @@
 
 $blue:#2A91DE;
 $red:#CC5959;
+$brown:#A02525;
 $gray:#9C9C9C;
 $light-gray:#00000029;
+$lighter-gray:#F9FAFC;
 $dark-gray:#66686E;
 $lavender: #B168C4;
 $yellow:#F8C62D;
@@ -13,10 +15,13 @@ $dark-green: #37B188;
 $dark-blue:#4771CB;
 $background-color:#FAFAFA ;
 $background-color-darker:#F7F7F7;
+$medium-green:#25A066;
 $lighter-blue:#F5F7FD;
 $light-blue:#54C9E8;
 $light-red:#FDF3F0;
 $light-yellow:#FFFCEF;
+$light-green:#D2F7DF;
+$light-brown:#c17f7f3b;
 $lighter-gray:#E7EBEE;
 $bright-green:#39C9AE;
 $bright-red:#C83935;
