--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -105,6 +105,9 @@ $bold:700;
   .align-right{
     text-align: right;
   }
+  .align-left{
+    text-align: left;
+  }
 
 .file-name{
     font-size: 0.9rem;
